--- a/data_import_examples/template.Rmd
+++ b/data_import_examples/template.Rmd
@@ -1,19 +1,21 @@
 ---
-title: "Simple document"
+title: "Data Import"
 output: html_document
 ---
 
-I'm an R Markdown document! 
-
-# Section 1
-
-Here's a **code chunk** that samples from 
-a _normal distribution_:
-
 ```{r}
-samp = rnorm(100)
-length(samp)
+library(tidyverse)
 ```
+
+# Import: CSV
+Use `reader` package
+```{r}
+litters_df = read_csv("FAS_litters.csv")
+litters_df = janitor::clean_names(litters_df)
+```
+
+
+
 
 # Section 2
 
